--- a/lesson2/main.css
+++ b/lesson2/main.css
@@ -24,7 +24,7 @@ body {
 
     /*border: 10px solid cornflowerblue;*/
 
-    border-left: 4px solid cornflowerblue;
+    border-left: 4px solid #d4d4d4;
 
     /*border-radius: 50%;*/
     border-radius: 10px;
